--- a/index.html
+++ b/index.html
@@ -9,28 +9,10 @@
 <body>
 <section class="mainbox">
     <div class="display">
-        <input type="text" name="display" id="display">
+        <!-- <input type="text" name="display" id="display"> -->
     </div>
 
     <div class="buttonbox">
-        <!-- <div class="button">1</div>
-        <div class="button">2</div>
-        <div class="button">3</div>
-        <div class="button">+</div>
-        <div class="button">4</div>
-        <div class="button">5</div>
-        <div class="button">6</div>
-        <div class="button">-</div>
-        <div class="button">7</div>
-        <div class="button">8</div>
-        <div class="button">9</div>
-        <div class="button">/</div>
-        <div class="button">+/-</div>
-        <div class="button">0</div>
-        <div class="button">.</div>
-        <div class="button">x</div>
-        <div class="button">AC</div>
-        <div class="button">=</div> -->
         <button class="button">1</button>
         <button class="button">2</button>
         <button class="button">3</button>
