add operations function and overflow scroll on display

--- a/index.html
+++ b/index.html
@@ -8,27 +8,25 @@
 </head>
 <body>
 <section class="mainbox">
-    <div class="display">
-        <!-- <input type="text" name="display" id="display"> -->
-    </div>
+    <div class="display"></div>
 
     <div class="buttonbox">
         <button class="button number">2</button>
         <button class="button number">1</button>
         <button class="button number">3</button>
-        <button class="button operator">+</button>
+        <button class="button number operator">+</button>
         <button class="button number">4</button>
         <button class="button number">5</button>
         <button class="button number">6</button>
-        <button class="button operator">-</button>
+        <button class="button number operator">-</button>
         <button class="button number">7</button>
         <button class="button number">8</button>
         <button class="button number">9</button>
-        <button class="button operator">/</button>
+        <button class="button number operator">/</button>
         <button class="button">+/-</button>
         <button class="button number">0</button>
         <button class="button number">.</button>
-        <button class="button operator">*</button>
+        <button class="button number operator">*</button>
         <button class="button">AC</button>
         <button class="button">=</button>
     </div>
