equal and cancel function

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <button class="button number">0</button>
         <button class="button number">.</button>
         <button class="button number operator">*</button>
-        <button class="button">AC</button>
-        <button class="button">=</button>
+        <button class="button delete">AC</button>
+        <button class="button equal">=</button>
     </div>
 
 </section>
