all buttons work

--- a/index.html
+++ b/index.html
@@ -8,26 +8,32 @@
 </head>
 <body>
 <section class="mainbox">
-    <div class="display"></div>
+    <section class="display">
+        <div class="first-value"></div>
+        <div class="opr"></div>
+        <div class="second-value"></div>
+        <div class="result"></div>
+    </section>
 
     <div class="buttonbox">
-        <button class="button number">2</button>
         <button class="button number">1</button>
+        <button class="button number">2</button>
         <button class="button number">3</button>
-        <button class="button number operator">+</button>
+        <button class="button operator">+</button>
         <button class="button number">4</button>
         <button class="button number">5</button>
         <button class="button number">6</button>
-        <button class="button number operator">-</button>
+        <button class="button operator">-</button>
         <button class="button number">7</button>
         <button class="button number">8</button>
         <button class="button number">9</button>
-        <button class="button number operator">/</button>
-        <button class="button">+/-</button>
+        <button class="button operator">/</button>
+        <button class="button inverse">+/-</button>
         <button class="button number">0</button>
-        <button class="button number">.</button>
-        <button class="button number operator">*</button>
+        <button class="button number decimal">.</button>
+        <button class="button operator">*</button>
         <button class="button delete">AC</button>
+        <button class="button backspace">C</button>
         <button class="button equal">=</button>
     </div>
 
