Assignment donegit add index.html script.js keyboard-support.js !

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     </div>
 
 </section>
-
+    <script src="keyboard-support.js"></script>
     <script src="script.js"></script>
+    
 </body>
 </html>
